--- a/homepage.css
+++ b/homepage.css
@@ -163,7 +163,7 @@ section{
 }
 
 .home .tagline .btn{
-    background-color: purple;  
+    background-color: hwb(300 0% 50%);  
     color: white;             
     padding: 1rem 2rem;            
     border: 2px solid purple;     
