--- a/mytrips.css
+++ b/mytrips.css
@@ -1,13 +1,19 @@
 .trip{
-    margin-top: 90px;
     margin-bottom: 20px;
     text-align: center;
     font-size: 2.5rem;
     font-family: "Poppins", sans-serif;
-    font-weight: 600;
+    font-weight: 500;
 
 }
 
+.confirm{
+    margin-top: 90px;
+    margin-bottom: 20px;
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 700;
+}
 
 table{
     margin: auto;
